# NeuroSimTools

./: .gitignore  EIRateModelExample.ipynb  EISpikingModelExample.ipynb  README.md  pyproject.toml  requirements.txt
examples/: EIRateModelExample.ipynb  EISpikingModelExample.ipynb  SimpleRateModelExample.ipynb
neurosimtools/: NeuroRNN.py  __init__.py  utils.py
