[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosimtools"
version = "0.1.0"
description = "PyTorch models for RNNs commonly used in computational neuroscience"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["neuroscience", "rnn", "pytorch", "rate-model", "spiking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "torch",
]

[project.optional-dependencies]
examples = [
    "ipykernel",
    "matplotlib",
    "jupyter",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurosimtools*"]
